--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config build/webpack.config.js --mode development"
+    "dev": "webpack-dev-server --hot",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.156",
     "antd": "^4.2.0",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
