--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^4.3.0",
     "less": "^3.11.1",
-    "less-loader": "^6.1.0",
+    "less-loader": "^5.0.0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "^1.2.1",
+    "ts-import-plugin": "^1.6.6",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
     "typings-for-css-modules-loader": "^1.7.0",
